feat: config layout and slicing home page

--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="LSP HCMI adalah LSP Pihak 3 yang akan melayani seluruh karyawan BUMN dan BUMD juga karyawan swasta atau siapa saja yang membutuhkan sertifikasi bidang SDM / Human Capital"
+    />
     <title>Vite + React + TS</title>
   </head>
   <body>
+    <div id="overlays"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
