refactor(index): change tag title name

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="LSP HCMI adalah LSP Pihak 3 yang akan melayani seluruh karyawan BUMN dan BUMD juga karyawan swasta atau siapa saja yang membutuhkan sertifikasi bidang SDM / Human Capital"
     />
-    <title>Vite + React + TS</title>
+    <title>LSP HCMI</title>
   </head>
   <body>
     <div id="overlays"></div>
